Updated expression language